--- a/proyectom/prodesarrollo/templates/paginas/perfil.html
+++ b/proyectom/prodesarrollo/templates/paginas/perfil.html
@@ -147,7 +147,11 @@
         <div class="flex flex-col md:flex-row items-center md:items-start gap-6">
             <!-- Foto de perfil -->
             <div class="w-32 h-32 md:w-40 md:h-40 rounded-full overflow-hidden border-2 border-gray-300">
-                <img src="{{ sugerencia.usuario.profile.avatar.url|default:'/media/perfiles/perfil_default.jpg' }}" alt="Foto de perfil" class="w-full h-full object-cover">
+                {% if user.imagen_perfil %}
+                            <img src="{{ user.imagen_perfil.url }}" alt="Foto de perfil" class="w-full h-full object-cover">
+                        {% else %}
+                            <img src="{% static 'img/default-profile.png' %}" alt="Sin imagen" class="w-full h-full object-cover">
+                    {% endif %}
             </div>
 
             <!-- Información del usuario -->
